<resources>
    <string name="app_name">VotRiteApp</string>
    <string name="splash_text">Welcome to on-line\n secure voting by VotRite</string>
    <string name="choose_ballot">Choose Ballot</string>
    <string name="choose_race">Choose Race</string>
    <string name="search">Search</string>
    <string name="confirm">Confirm</string>
    <string name="errorBallot">There are no active ballots \n Please, try again later</string>
    <string name="errorRace">There are no race in this ballot \n Please, try again later</string>
    <string name="errorNetwork">Network connection error. \n Please, try again later</string>
    <string name="confirmCastParty">Are you sure you want to cast your vote?</string>
    <string name="emptyCand">There are no any candidates. \n Please, try again later</string>
    <string name="emptyParty">There are no any parties. \n Please, try again later</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="password">Pincode</string>
    <string name="hint_pass">Please enter Your Pincode</string>
    <string name="error">Error</string>
    <string name="errorPassword">The Pincode is incorrect \n Would you like to retry?</string>
    <string name="errorExpireTime">This Pincode expiration time is already finished. \n Please try other ballots.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_language">LANGUAGE</string>
    <string name="contest">CONTEST</string>
    <string name="someone_else">Write-In Candidate</string>
    <string name="more_than">and no more than (</string>
    <string name="less_than">Vote for candidates no less than (</string>
    <string name="change_race">Change Rank</string>
    <string name="contest_header_txt">Please assign preferences to \n candidates by using \'+\' and \'-\' buttons</string>
    <string name="save_change">Save Change</string>
    <string name="proposition">Propositions</string>
    <string name="against">Against</string>
    <string name="vote_for">For</string>
    <string name="reset">Cancel Ballot</string>
    <string name="accept">Accept and print</string>
    <string name="cast">Cast</string>
    <string name="print">Print</string>
    <string name="review">REVIEW</string>
    <string name="review1">FINAL REVIEW</string>
    <string name="mass_proposition">Mass Propositions</string>
    <string name="proposition_title">New Proposition Title</string>
    <string name="directors">Candidates</string>
    <string name="vote_for_party">Vote for Party (Vote for no more than one)</string>
    <string name="vote_for_cand">Vote for Candidate</string>
    <string name="ok">OK</string>
    <string name="less_than_error">You can\'t vote less than \</string>
    <string name="more_than_error">You can\'t vote more than \</string>
    <string name="candidates">\ candidates\</string>
    <string name="add_cand_error">You can\'t add candidate anymore!</string>
    <string name="error_message">Whoops! Something went wrong.</string>
    <string name="party_sel_error">Please select the Party.</string>
    <string name="cand_sel_error">Please select the Candidate.</string>
    <string name="voted_msg">You have already voted. \n Please try another race.</string>
    <string name="voted_msg1">You have already voted.</string>
    <string name="not_vote">Please press the highlighted area to proceed.</string>
    <string name="voted">You voted</string>
    <string name="search_not_fount">There isn\'t exist like that ballot.</string>
    <string name="sel_lang">Please select your language</string>
    <string name="error_ranks">Ranks must be not the same.</string>
    <string name="error_ranks1">Ranks must be not the same. \n Change the rank first.</string>
    <string name="no_cast_cand">No select any candidate</string>
    <string name="pincode_used">This Pincode has already used. \n Please use others.</string>
    <string name="cofirm_dlg_msg">You didn\'t cast the rest of races yet. \n Are you sure you don\'t want to cast anymore?</string>
    <string name="you_voted">You voted!</string>
    <string name="todo">TODO</string>
    <string name="x">X</string>
    <string name="add_candidate_name">Add Candidate Name</string>
    <string name="enter_candidate_name">Enter candidate name</string>
    <string name="save">Save</string>
    <string name="please_select_the_party">Please select the party</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="parties">Parties</string>
    <string name="cast_my_vote">Cast my vote</string>
    <string name="no_sel_cand">No selected</string>
    <string name="help">Help</string>
    <string name="help_cand_change_race">To change the rank, touch a plus or minus button. A changed value will appear to confirm your change. Please input other value for each candidate. When you are done, touch the \"Next(right arrow)\" button to continue to the next screen. Touch the \"Skip\" button to skip. Touch the \"Write-In Candidate\" button to add other candidates.</string>
    <string name="help_contest">To vote, touch a name. A check mark will appear to confirm your selection. To unselect the name, touch it again. When you are done, touch the \"Next(right arrow)\" button to continue to the next screen. Touch the \"Skip\" button to skip. Touch the \"Write-In Candidate\" button to add other candidates.</string>
    <string name="help_party">To vote, touch a party name. A check mark will appear to confirm your selection. To unselect the party, touch it again. When you are done, touch the \"Next\" button to continue to the next screen. Touch the \"Skip\" button to skip.</string>
    <string name="help_prop">To vote, touch a \"YES\" or \"NO\" or \"FOR\" or \"AGAINST\" button. A check mark will appear to confirm your selection. To unselect the answer, touch it again. When you are done, touch the \"Next\" button to continue to the next screen. Touch the \"Skip\" button to skip.</string>
    <string name="help_review">Read each name and review each selection carefully. When you are done, press the \"Cast my vote\" button. If you wish you can edit the voting result by clicking race names.</string>
    <string name="rank_race_title">Change the rank of candidates by clicking the \"Change Rank\" button.</string>
    <string name="next">Next</string>
    <string name="review_your_choice">Skip</string>
    <string name="review_your_choice1">Return to review</string>
    <string name="go_back">Go Back</string>
    <string name="end_blank">)</string>
</resources>
