<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VotForPartyActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"
                android:text="@string/go_back"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contest"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnHelp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_help"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_ballots"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shadow_borders">

        <TextView
            android:id="@+id/ballot_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textSize="19sp"
            android:textColor="@color/colorBlack" />

        <RelativeLayout
            android:id="@+id/description"
            android:layout_below="@+id/ballot_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/massProposition_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_for_party"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_party"
            android:layout_below="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="76dp">

            <ListView
                android:id="@+id/lv_party"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbarStyle="outsideOverlay"
                android:divider="@color/colorWhite"
                tools:listitem="@layout/list_party"
                android:fadeScrollbars="false"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:textColor="@drawable/style_dialog_text"
                android:background="@drawable/round_border_button"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnCast"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@drawable/style_dialog_text"
                android:background="@drawable/round_border_button"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>