<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"
                android:text="@string/go_back"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_ballots"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="-90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shadow_borders">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_pass"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="18dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textColorHint="@color/colorHint"
                android:inputType="textPassword"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:background="@color/colorWhite"
                android:autofillHints="" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentLeft="true"
                android:background="#D5D2D6" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-70dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/background_oval_blue">

        <Button
            android:id="@+id/btnNext"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_next"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>